Cadastramento de Clientes.ipynb

--- a/Cadastramento de Clientes.ipynb
+++ b/Cadastramento de Clientes.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Importar o caminho de acesso ao arquivo html para login; usar a biblioteca OS:"
+    "##### Importar o caminho de acesso ao arquivo html para login:"
    ]
   },
   {
